[package]
name = "venko"
version = "0.1.0"
description = "Program for issuing token streams on Solana."
edition = "2021"
homepage = "https://venko.app"
repository = "https://github.com/VenkoApp/venko"
authors = ["Venko Team <team@venko.app>"]
license = "AGPL-3.0"
keywords = ["solana", "anchor", "finance", "venko"]

[lib]
crate-type = ["cdylib", "lib"]
name = "venko"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.17"
anchor-spl = ">=0.17"
num-traits = "0.2"
crate-token = { version = "0.4.0", features = ["cpi"] }
vipers = "1.5.5"

[dev-dependencies]
proptest = { version = "1.0" }
